# cookiecutter-mlops-package

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cookiecutter-mlops-package.code-workspace  cookiecutter.json  invoke.yaml  justfile  pyproject.toml  tasks.py
.github/: FUNDING.yml
.github/workflows/: tests.yml
tests/: test_cookiecutter.py
{{cookiecutter.repository}}/: .pre-commit-config.yaml  .python-version  Dockerfile  LICENCE.txt  MLproject  README.md  docker-compose.yml  invoke.yaml  justfile  pyproject.toml
{{cookiecutter.repository}}/.github/actions/setup/: action.yml
{{cookiecutter.repository}}/.github/workflows/: check.yml  publish.yml
{{cookiecutter.repository}}/src/{{cookiecutter.package}}/: __init__.py  __main__.py  scripts.py
{{cookiecutter.repository}}/tasks/: check.just  clean.just  doc.just  docker.just  format.just  mlflow.just  package.just  project.just  projects.py
{{cookiecutter.repository}}/tests/: conftest.py  test_scripts.py
