# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "cookiecutter-mlops-package"
version = "4.1.0"
description = "Build and deploy Python packages and Docker images for MLOps projects."
authors = [{ name = "Médéric HURIER", email = "github@fmind.dev" }]
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.txt" }

# DEPENDENCIES

[dependency-groups]
dev = [
    "commitizen>=4.1.0",
    "pre-commit>=4.0.1",
    "pytest-cookies>=0.7.0",
    "pytest-shell-utilities>=1.9.7",
    "pytest>=8.3.4",
    "rust-just>=1.39.0",
]

# TOOLS

[tool.uv]
package = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
