# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "{{cookiecutter.repository}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [{ name = "{{cookiecutter.user}}" }]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "mlflow>={{cookiecutter.mlflow_version}}",
]
license = { file = "LICENSE.txt" }
keywords = ["mlops", "python", "package"]

# LINKS

[project.urls]
Homepage = "https://github.com/{{cookiecutter.user}}/{{cookiecutter.repository}}"
Documentation = "https://{{cookiecutter.user}}.github.io/{{cookiecutter.repository}}/"
Repository = "https://github.com/{{cookiecutter.user}}/{{cookiecutter.repository}}e"
"Bug Tracker" = "https://github.com/{{cookiecutter.user}}/{{cookiecutter.repository}}/issues"
Changelog = "https://github.com/{{cookiecutter.user}}/{{cookiecutter.repository}}/blob/main/CHANGELOG.md"

# SCRIPTS

[project.scripts]
{{cookiecutter.repository}} = "{{cookiecutter.package}}.scripts:main"

# DEPENDENCIES

[dependency-groups]
checks = [
    "bandit>=1.8.0",
    "coverage>=7.6.8",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
commits = ["commitizen>=4.0.0", "pre-commit>=4.0.1"]
dev = ["invoke>=2.2.0"]
docs = ["pdoc>=15.0.0"]
notebooks = ["ipykernel>=6.29.5", "nbformat>=5.10.4"]

# TOOLS

[tool.uv]
default-groups = ["checks", "commits", "dev", "docs", "notebooks"]

[tool.bandit]
targets = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
python_version = "{{cookiecutter.python_version}}"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py{{cookiecutter.python_version.replace('.', '')}}"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

# SYSTEMS

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
